[package]
name = "rancid-cache"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4.5.39", features = ["derive"] }
rcgen = "0.13.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winnow = "0.7.10"
