[package]
name = "rancid-cache"
version = "0.1.0"

[workspace]
resolver = "3"
members = ["rcl", "coordinator", "builder"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5.39", features = ["derive"] }
stabby = { version = "72.1.1", features = ["libloading"] }
tempfile = "3.20.0"

[dependencies]
anyhow.workspace = true
builder = { path = "builder" }
coordinator = { path = "coordinator" }
tempfile.workspace = true
